--- a/fundamentals/02-css/lesson-01-beginner.html
+++ b/fundamentals/02-css/lesson-01-beginner.html
@@ -1181,6 +1181,29 @@
         </div><br>
 
         <!--
+        The CSS pseudo-class selector :enabled represents an element that is enabled.
+        An element is in an enabled state, if it can be activated (selected, clicked on, typed into, etc.).
+        ... or accepts focus.
+        -->
+        <div class="pc-enabled">
+          <h3>Pseudo-Class :enabled</h3>
+          <form action="">
+            <label for="pce-first-name">First Name</label>
+            <input type="text" id="pce-first-name"><br>
+
+            <label for="pce-last-name">Last Name</label>
+            <input type="text" id="pce-last-name"><br>
+
+            <label for="pce-address">Address</label>
+            <input type="text" id="pce-address" disabled value="Address">
+
+            <br><br>
+            <input type="reset" disabled>
+            <input type="submit">
+          </form>
+        </div><br>
+
+        <!--
         Pseudo-Class First-Child.
         The pseudo-class first-child is used to select the first direct child element.
         The syntax for pseudo-class first-child selector is as follows:
